[metadata]
name = enge
version = 2024.03.25
author = Daniel Diblik
author_email = ddiblik@redhat.com
description = Testing farm API requests dispatcher.
long_description = file: README.md
long_description_content_type = text/markdown
url = "https://github.com/danmyway/enge",
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.11
install_requires =
    requests
    copr
    koji
    prettytable
    lxml
    pygments

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    enge = enge:main

[tox:tox]
envlist = py311

[testenv]
deps = pytest
commands = pytest -s tests
